src/configs/other/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    # cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.local
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
  - hosts: 
    - nextcloud.local
    secretName: nginx-tls
